samples/_failures_safe/1761407923_6e4a88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f2ce963.c: In function ‘main’:
./samples/SAFE/__tmp_2f2ce963.c:161:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  161 |     size_t num_events
      |     ^~~~~~
./samples/SAFE/__tmp_2f2ce963.c:161:5: error: expected declaration or statement at end of input
